# tidybot

./: .env  .gitignore  README.md  requirements.txt  setup_env.sh
tidybot_behavior/: package.xml  setup.cfg  setup.py
tidybot_behavior/launch/: behavior.launch.py
tidybot_behavior/tidybot_behavior/: __init__.py  arm_controller.py  collision_monitor.py  object_detector.py  pick_and_place.py  task_manager.py
tidybot_bringup/: CMakeLists.txt  package.xml
tidybot_bringup/launch/: tidybot.launch.py
tidybot_control/: CMakeLists.txt  package.xml
tidybot_control/config/: tidybot_controllers.yaml
tidybot_control/launch/: control.launch.py
tidybot_description/: CMakeLists.txt  package.xml
tidybot_description/launch/: display.launch.py
tidybot_description/rviz/: tidybot.rviz  tidybot_sensors.rviz
tidybot_description/urdf/: tidybot.urdf.xacro
tidybot_gazebo/: CMakeLists.txt  package.xml
tidybot_gazebo/config/: .gitkeep
tidybot_gazebo/launch/: gazebo.launch.py
tidybot_gazebo/models/: .gitkeep
tidybot_gazebo/worlds/: tidybot_home.world
tidybot_navigation/: CMakeLists.txt  package.xml
tidybot_navigation/config/: ekf.yaml  nav2_params.yaml
tidybot_navigation/launch/: navigation.launch.py
tidybot_navigation/maps/: generate_map.py  tidybot_home.pgm  tidybot_home.yaml
tidybot_navigation/scripts/: waypoint_navigator.py
tools/: compute_inertia.py
